--- a/src/app/modules/employee/order-administration/order-details/order-details.component.html
+++ b/src/app/modules/employee/order-administration/order-details/order-details.component.html
@@ -1,5 +1,8 @@
 <div id="summary">
-  <div class="row justify-content-center" *ngIf="!resourcesLoaded">
+  <div
+    class="row justify-content-center"
+    *ngIf="!orderResourcesLoaded || !accountResourcesLoaded"
+  >
     <div
       class="spinner-border text-success"
       role="status"
@@ -8,7 +11,7 @@
       <span class="sr-only">Loading...</span>
     </div>
   </div>
-  <div *ngIf="resourcesLoaded">
+  <div *ngIf="orderResourcesLoaded && accountResourcesLoaded">
     <div class="summary-component">
       <button
         type="button"
@@ -29,11 +32,11 @@
           <tbody>
             <tr>
               <td class="param-name">Account Name</td>
-              <td>Test123</td>
+              <td>{{ accountDetails.accountName }}</td>
             </tr>
             <tr>
               <td class="param-name">Email</td>
-              <td></td>
+              <td>{{ accountDetails.email }}</td>
             </tr>
           </tbody>
         </table>
@@ -131,6 +134,17 @@
       >
         Delivery Address
       </button>
+      <button
+        type="button"
+        class="summary-component-button edit-button btn btn-warning"
+        (click)="
+          (deliveryAddressEditable = !deliveryAddressEditable) &&
+            (changesAvailableForProcessing = true)
+        "
+        aria-controls="delivery-address"
+      >
+        Edit
+      </button>
       <div
         id="delivery-address"
         class="border border-success rounded-lg"
@@ -145,6 +159,7 @@
                   id="city"
                   type="text"
                   class="form-control"
+                  [readonly]="!deliveryAddressEditable"
                   [(ngModel)]="orderDTO.deliveryAddressDTO.cityName"
                 />
               </td>
@@ -156,6 +171,7 @@
                   id="zip-code"
                   type="text"
                   class="form-control"
+                  [readonly]="!deliveryAddressEditable"
                   [(ngModel)]="orderDTO.deliveryAddressDTO.zipCode"
                 />
               </td>
@@ -167,6 +183,7 @@
                   id="street"
                   type="text"
                   class="form-control"
+                  [readonly]="!deliveryAddressEditable"
                   [(ngModel)]="orderDTO.deliveryAddressDTO.streetName"
                 />
               </td>
@@ -178,6 +195,7 @@
                   id="house-number"
                   type="text"
                   class="form-control"
+                  [readonly]="!deliveryAddressEditable"
                   [(ngModel)]="orderDTO.deliveryAddressDTO.houseNumber"
                 />
               </td>
@@ -189,6 +207,7 @@
                   id="apratment"
                   type="text"
                   class="form-control"
+                  [readonly]="!deliveryAddressEditable"
                   [(ngModel)]="orderDTO.deliveryAddressDTO.apartmentNumber"
                 />
               </td>
@@ -207,6 +226,17 @@
       >
         Details
       </button>
+      <button
+        type="button"
+        class="summary-component-button edit-button btn btn-warning"
+        (click)="
+          (detailsEditable = !detailsEditable) &&
+            (changesAvailableForProcessing = true)
+        "
+        aria-controls="details"
+      >
+        Edit
+      </button>
       <div
         id="details"
         class="border border-success rounded-lg"
@@ -217,6 +247,7 @@
           id="message"
           type="text"
           class="form-control"
+          [readOnly]="!detailsEditable"
           [(ngModel)]="orderDTO.message"
         />
         <label for="delivery-date">Delivery date</label>
@@ -224,6 +255,7 @@
           id="delivery-date"
           type="text"
           class="form-control"
+          [readOnly]="!detailsEditable"
           [(ngModel)]="orderDTO.deliveryDate"
         />
         <label for="additional-info">Additional information about order</label>
@@ -231,6 +263,7 @@
           id="additional-info"
           type="text"
           class="form-control"
+          [readOnly]="!detailsEditable"
           [(ngModel)]="orderDTO.additionalNote"
         ></textarea>
       </div>
@@ -245,6 +278,17 @@
       >
         Payment
       </button>
+      <button
+        type="button"
+        class="summary-component-button edit-button btn btn-warning"
+        (click)="
+          (paymentEditable = !paymentEditable) &&
+            (changesAvailableForProcessing = true)
+        "
+        aria-controls="payment"
+      >
+        Edit
+      </button>
       <div
         id="payment"
         class="border border-success rounded-lg"
@@ -257,6 +301,7 @@
               id="payment-type"
               type="text"
               class="form-control"
+              [readOnly]="!paymentEditable"
               [(ngModel)]="orderDTO.paymentDTO.paymentType"
               readonly
             />
@@ -267,6 +312,7 @@
               id="was-paid"
               type="checkbox"
               class="form-control"
+              [disabled]="!paymentEditable"
               [(ngModel)]="orderDTO.paymentDTO.wasPaid"
             />
           </div>
@@ -281,6 +327,26 @@
               >
             </h4>
           </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="button col">
+          <button
+            type="button"
+            class="changes-descision-button btn btn-danger"
+            [disabled]="!changesAvailableForProcessing"
+            (click)="cancelChanges()"
+          >
+            Discard changes
+          </button>
+          <button
+            type="button"
+            class="changes-descision-button save-changes-button btn btn-success"
+            [disabled]="!changesAvailableForProcessing"
+            (click)="saveChanges()"
+          >
+            Save changes
+          </button>
         </div>
       </div>
     </div>
