--- a/src/app/modules/employee/order-administration/order-details/order-details.component.sass
+++ b/src/app/modules/employee/order-administration/order-details/order-details.component.sass
@@ -36,6 +36,14 @@
 .summary-component-button
   width: 150px
 
+.edit-button
+  margin-left: 0.2em
+
+.changes-descision-button
+  margin-left: 25%
+  margin-bottom: 0.2em
+  width: 50%
+
 @media screen and (max-width: 767px)
   .component-title
     font-size: 1em
@@ -44,6 +52,8 @@
   .summary-component-button
     font-size: 0.9em
     width: 8em
+  .changes-descision-button
+    font-size: 0.9em
   .total-price>h4>b
     font-size: 0.6em
   #payment-type
@@ -51,7 +61,6 @@
     font-size: 0.95em
   input
     font-size: 0.85em
-    
 
 @media (min-width: 768px) and (max-width: 991px)
   .component-title
